2007-12-06  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/xyzformat.cpp: Fix bogus warning about titles when
	reading past the end of the file.

	* data/element.*: Fix atom colors to match Jmol standard. (Changes
	in Fe, Co, Ni, Cu only.)

2007-12-06  Tim Vandermeersch <tim.vandermeersch@gmail.com>
	
	* src/forcefield.cpp, include/openbabel/forcefield.h: Added some log
	functions, documentation update and bond length constraints.

2007-12-05  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp, include/openbabel/forcefield.h: OBForceField now
	defines Setup() itself. It calls the needed virtual setup functions
	which FF implementations can overwrite.
	Continue work on constraints implementation.

	* src/forcefields/*: Changes for new Setup system.
	
	* include/openbabel/atom.h: Removed old Ignore/Fixed functions.

2007-12-04  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp, include/openbabel/forcefield.h: Updated support
	for constraints by added OBFFConstraints class.

2007-12-03  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/pointgroup.h, src/pointgroup.cpp: New class to
	wrap  S. Patchkovskii's brute-force 3D point group symmetry
	code. Still needs some updates from original C code, particularly
	to make it "less chatty."

	* tools/Makefile.am, tools/obsym.cpp: New tool to detect point
	group symmetry and eventually write newly "symmetrized" coordinates.

	* src/CMakeLists.txt, src/forcefields/Makefile.*: Update to remove
	MM2 forcefield from building.

2007-12-03  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp, include/openbabel/forcefield.h: Added
	IsSetupNeeded to limit the number of calls to Setup, this improves
	performance for applications like avogadro (AutoOpt tool)

2007-12-02 Chris Morley

	* src/forcefield.cpp, include/openbabel/forcefield.h,
	forcefieldghemical.h, forcefieldmm2.h, forcefieldmmff94.h